updated map dimensions. This ensures the map markers are visible since the coordinates are randomly generated

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,8 @@
+html, body {
+    width: 100%;
+}
+
 #map {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100dvh;
 }
